# rlchess-engine

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
bindings/: py_module.cpp
include/rlchess/: bitboard.hpp  board.h  board.hpp
src/: board.cpp
